corrections review code : remove css class, use bootstrap instead, change folder for video, add parallax effect on main picture

--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -1,4 +1,4 @@
-<section class="container pt-5">
+<section class="container ">
   <div class="py-sm-3 py-md-4 py-lg-5 my-xxl-3">
     <div class="row pt-md-2 pt-lg-3 pt-xl-4 pb-lg-2 pb-xl-3">
       <div class="col-md-6">
@@ -15,28 +15,23 @@
     </div>
   </div>
 </section>
+<section>
+  <div class="jarallax rounded overflow-hidden z-2" data-speed="0.5">
+    <div class="jarallax-img" style="background-image: url('/assets/img/announcement/annonce_bandeau_img.jpg');"></div>
+  </div>
+</section>
 
-<div class="jarallax" data-jarallax data-speed="0.6">
-  <div class="jarallax-img" style="background-image: url(assets/img/announcement/annonce_bandeau_img.jpg);"></div>
-  <div class="d-none d-xxl-block" style="height: 830px; margin-top: -470px;"></div>
-  <div class="d-none d-xl-block d-xxl-none" style="height: 780px; margin-top: -490px;"></div>
-  <div class="d-none d-lg-block d-xl-none" style="height: 700px; margin-top: -560px;"></div>
-  <div class="d-none d-sm-block d-lg-none" style="height: 520px; margin-top: -450px;"></div>
-  <div class="d-sm-none" style="height: 500px; margin-top: -450px;"></div>
-</div>
 
 <explaination-video></explaination-video>
 
 <description-my-account></description-my-account>
 
-<section class="container pt-5 mt-lg-3 mt-xl-4 mt-xxl-5">
+<section class="container mt-lg-3 mt-xl-4 mt-xxl-5">
   <div class="bg-primary rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5" style="position: relative;">
-    <!-- Image positionnée absolument, sans affecter la taille du bloc -->
     <img class="position-absolute top-50 start-0 translate-middle-y d-none d-md-block"
       style="z-index: 0; width: 186px; max-height: 100%;" src="assets/img/landing/yoga-studio/cta/bg.svg"
       alt="Background flower">
 
-    <!-- Contenu de la section -->
     <div class="row position-relative z-2 align-items-center">
       <div class="col-md-6 col-lg-5 offset-lg-1">
         <div class="text-center text-md-start py-5 px-4 px-sm-5 pe-md-0 ps-lg-4 ps-xl-5">
@@ -67,7 +62,6 @@
     </div>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 pb-xl-2 pb-xxl-3">
 
-      <!-- Item -->
       <div class="col">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
@@ -81,7 +75,6 @@
         </div>
       </div>
 
-      <!-- Item -->
       <div class="col">
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
@@ -96,7 +89,6 @@
         </div>
       </div>
 
-      <!-- Item -->
       <div class="col">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
@@ -111,7 +103,6 @@
         </div>
       </div>
 
-      <!-- Item -->
       <div class="col">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
@@ -125,7 +116,6 @@
           </div>
         </div>
       </div>
-      <!-- Item -->
       <div class="col">
         <div class="card h-100 border-0 rounded-5 text-center text-align-center background-yellow">
           <div class="card-body pb-3">
@@ -136,7 +126,6 @@
         </div>
       </div>
 
-      <!-- Item -->
       <div class="col">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
@@ -219,7 +208,6 @@
       </div>
     </div>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 pb-xl-2 pb-xxl-3">
-      <!-- Item -->
       <div class="col">
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
@@ -236,7 +224,6 @@
         </div>
       </div>
 
-      <!-- Item -->
       <div class="col">
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
@@ -253,7 +240,6 @@
         </div>
       </div>
 
-      <!-- Item -->
       <div class="col">
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
