--- a/client-myjss/src/app/modules/miscellaneous/components/double-buttons/double-buttons.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/double-buttons/double-buttons.component.html
@@ -1,6 +1,7 @@
 <div class="d-block ">
-  <button type="button" class="btn btn-secondary">{{orderActionLabel}} <i class="ai-arrow-right"></i></button>
-  <button type="button" class="btn btn-outline-secondary ">{{quotationActionLabel}} <i
+  <button type="button" href="#" class="btn btn-secondary mb-2 me-5">{{orderActionLabel}} <i
+      class="ai-arrow-right"></i></button>
+  <button type="button" href="#" class="btn btn-outline-secondary mb-2  me-5">{{quotationActionLabel}} <i
       class="ai-arrow-right"></i></button>
 </div>
 <div class="d-block">
