--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.css
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.css
@@ -1,9 +1,3 @@
-.bg-primary {
-  position: relative;
-  height: 400px;
-  overflow: hidden;
-}
-
 .bg-primary img {
   position: absolute;
   top: 50%;
@@ -19,13 +13,10 @@
   z-index: 1;
 }
 
-.row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100%;
-}
-
 .background-yellow {
   background: #F3E3CA;
+}
+
+.jarallax {
+  height: 400px;
 }
