corrections after code review the 06-03-25

--- a/client-myjss/src/app/modules/miscellaneous/components/description-my-account/description-my-account.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/description-my-account/description-my-account.component.html
@@ -14,7 +14,7 @@
           <div class="text-body-secondary pt-1">01</div>
           <div class="ps-3">
             <h3 class="h5 text-white">Gestion de votre commande</h3>
-            <p class="mb-0 text-body-secondary">Suivi de votre dossier en ligne via MYJSS et consultation des pièces
+            <p class="mb-0 text-body-secondary">Suivi de votre dossier en ligne via MyJSS et consultation des pièces
               obligatoires, avec une
               mise à jour en temps réel de l'avancement.</p>
           </div>
@@ -31,7 +31,7 @@
           <div class="text-body-secondary pt-1">03</div>
           <div class="ps-3">
             <h3 class="h5 text-white">Données sécurisées</h3>
-            <p class="mb-0">Téléchargez facilement tous vo documents importants : factures, Kbis, et autres pièces
+            <p class="mb-0">Téléchargez facilement tous vos documents importants : factures, Kbis, et autres pièces
               justificatives en toute sécurité.</p>
           </div>
         </div>
@@ -40,7 +40,7 @@
           <div class="ps-3">
             <h3 class="h5 text-white">Accompagnement sur mesure</h3>
             <p class="mb-0">Une plateforme simple à utiliser pour vous faire gagner du temps, avec des échanges directs
-              en ligne avec votre formaliset attitré et votre chargé de clientèle.</p>
+              en ligne avec votre formalité attitré et votre chargé de clientèle.</p>
           </div>
         </div>
       </div>
