--- a/client-myjss/src/app/modules/miscellaneous/components/carousel/generic-carousel/generic-carousel.component.css
+++ b/client-myjss/src/app/modules/miscellaneous/components/carousel/generic-carousel/generic-carousel.component.css
@@ -7,6 +7,29 @@
   cursor: grab;
 }
 
+.card-text {
+  max-height: 4.5em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  display: block;
+  word-break: break-word;
+}
+
+.card-title {
+  max-height: 4.5em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  word-break: break-word;
+}
+
+.card-carousel {
+  flex-shrink: 0;
+  width: 25%;
+  max-height: 400px;
+  border-radius: 10px;
+}
 
 @media (max-width: 768px) {
   .carousel-container {
@@ -17,28 +40,6 @@
   .card-carousel {
     flex: 0 0 100%;
   }
-}
-
-.card-text {
-  max-height: 4.5em;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: normal;
-  display: block;
-  word-break: break-word;
-}
-
-.card-carousel {
-  flex-shrink: 0;
-  width: 25%;
-  max-height: 300px;
-  border-radius: 10px;
-}
-
-.card-img-top {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
 }
 
 .pagination-bullets {
@@ -80,10 +81,14 @@
 
 .image-only {
   width: 100%;
-  height: 100%;
+  height: 400px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-img.card-img-full {
+.image-only img {
   width: 100%;
   height: 100%;
   object-fit: cover;
